@@ -1,5 +1,6 @@
 package mate.academy.spring.service.mapper;
 
+import java.util.stream.Collectors;
 import mate.academy.spring.dto.response.OrderResponseDto;
 import mate.academy.spring.model.Order;
 import mate.academy.spring.model.Ticket;
@@ -16,7 +17,7 @@ public class OrderMapper implements ResponseDtoMapper<OrderResponseDto, Order> {
         responseDto.setTicketIds(order.getTickets()
                 .stream()
                 .map(Ticket::getId)
-                .toList());
+                .collect(Collectors.toList()));
         return responseDto;
     }
 }
